--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,8 +7,21 @@
 
   <display-name>Basic Servlet Application</display-name>
 
-  <welcome-file-list>
-    <welcome-file>index.jsp</welcome-file>
-  </welcome-file-list>
+  <!-- <welcome-file-list> -->
+  <!--   <welcome-file>index.jsp</welcome-file> -->
+  <!-- </welcome-file-list> -->
+
+    <servlet>
+	    <servlet-name>spring</servlet-name>
+	    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+	    <load-on-startup>1</load-on-startup>
+    </servlet>
+
+    <!-- Step 2: Set up URL mapping for Spring MVC Dispatcher Servlet -->
+    <servlet-mapping>
+	    <servlet-name>dispatcher</servlet-name>
+	    <url-pattern>/</url-pattern>
+    </servlet-mapping>
+
 </web-app>
 
